--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "@pickme/reminder-parcel",
+  "type": "module",
   "version": "0.0.1",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "vite": "^6.0.11"
+  }
 }
