chore: Vite 설정으로 개발용 https 서버 실행

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
-VITE_ONE_SIGNAL_APP_ID= # OneSignal에서 발급받은 APP ID
-VITE_USER_ID=           # 사용자 식별 ID
+VITE_PUBLIC_URL=/       # (옵션)퍼블릭 URL
+VITE_SERVER_PORT=       # (옵션)포트 번호
+VITE_ONE_SIGNAL_APP_ID= # (필수)OneSignal에서 발급받은 APP ID
+VITE_USER_ID=           # (옵션)사용자 식별 ID
