--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "version": "0.0.1",
   "main": "index.ts",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --host"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^1.2.0",
-    "vite": "^6.0.11"
+    "vite": "^6.0.11",
+    "vite-plugin-static-copy": "^2.2.0"
   }
 }
