--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite-plugin-static-copy": "^2.2.0"
   },
   "dependencies": {
+    "jwt-decode": "^4.0.0",
     "vite-plugin-single-spa": "^0.9.0"
   }
 }
