--- a/.github/workflows/vite-build.yml
+++ b/.github/workflows/vite-build.yml
@@ -36,12 +36,14 @@ jobs:
       - name: Build Vite project
         env:
           VITE_PUBLIC_URL: ${{ vars.VITE_GH_PAGE_URL }}
+          VITE_AUTH_PARCEL_URL: ${{ vars.VITE_GH_PAGE_AUTH_PARCEL_URL }}
         run: |
           npm run build
 
       - name: Build Vite For single-spa
         env:
           VITE_PUBLIC_URL: ${{ vars.VITE_PUBLIC_URL }}
+          VITE_AUTH_PARCEL_URL: ${{ vars.VITE_AUTH_PARCEL_URL }}
         run: |
           npm run build:single-spa
 
