--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@pickme/reminder",
+  "version": "1.2.3",
+  "description": "PickMe 프로젝트의 알림 마이크로 꾸러미 조각 ",
+  "author": "NarciSource",
   "type": "module",
-  "version": "0.0.1",
+  "license": "ISC",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
@@ -10,9 +13,6 @@
     "preview:single-spa": "vite preview --mode single-spa --host",
     "start": "npm run build && npm run build:single-spa && npm run preview:single-spa"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^1.2.0",
     "vite": "^6.0.11",
@@ -21,5 +21,10 @@
   "dependencies": {
     "jwt-decode": "^4.0.0",
     "vite-plugin-single-spa": "^0.9.0"
+  },
+  "homepage": "https://github.com/Daily1Hour/PickMe",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Daily1Hour/PickMe-Reminder-Parcel.git"
   }
 }
